hw2/y.output
   0  $accept : program $end

   1  program : programComp
   2          | program programComp

   3  programComp : delVarsScalar
   4              | delVarsArray
   5              | delFn ';'
   6              | delFn compoundStmt

   7  expr : '(' expr ')'
   8       | expr assignment expr
   9       | expr '+' expr
  10       | expr '-' expr
  11       | expr '*' expr
  12       | expr '/' expr
  13       | expr '%' expr
  14       | expr '|' expr
  15       | expr '&' expr
  16       | expr '^' expr
  17       | expr LOGICALOR expr
  18       | expr LOGICALAND expr
  19       | expr EQNEQ expr
  20       | expr RELATION expr
  21       | expr BITSHIFT expr
  22       | '+' expr
  23       | '-' expr
  24       | '&' expr
  25       | '*' expr
  26       | '!' expr
  27       | '~' expr
  28       | INCDEC expr
  29       | expr INCDEC
  30       | factor
  31       | expr '(' args ')'
  32       | '(' delType ')' expr
  33       | expr MEMBER ID

  34  assignment : '='
  35             | ASSIGNMENT

  36  factor : mutable
  37         | immutable

  38  mutable : ID
  39          | ID delArrayDims

  40  immutable : const

  41  args : expr
  42       | args ',' expr
  43       |

  44  delType : INT
  45          | delLongShort INT
  46          | SIGNED_UNSIGNED INT
  47          | SIGNED_UNSIGNED delLongShort INT
  48          | CONST INT
  49          | CONST delLongShort INT
  50          | CONST SIGNED_UNSIGNED INT
  51          | CONST SIGNED_UNSIGNED delLongShort INT
  52          | CHAR
  53          | delLongShort
  54          | SIGNED_UNSIGNED CHAR
  55          | SIGNED_UNSIGNED delLongShort
  56          | CONST CHAR
  57          | CONST delLongShort
  58          | CONST SIGNED_UNSIGNED CHAR
  59          | CONST SIGNED_UNSIGNED delLongShort
  60          | SIGNED_UNSIGNED
  61          | FLOAT
  62          | DOUBLE
  63          | VOID
  64          | CONST SIGNED_UNSIGNED
  65          | CONST FLOAT
  66          | CONST DOUBLE
  67          | CONST VOID
  68          | CONST

  69  delLongShort : LONG
  70               | LONG LONG
  71               | SHORT

  72  const : CONST_INT
  73        | CONST_FLOAT
  74        | CONST_CHAR
  75        | CONST_STRING

  76  delVarsScalar : delType delScalars ';'

  77  delVarsArray : delType delArrays ';'

  78  delScalars : delScalar
  79             | delScalars ',' delScalar

  80  delScalar : ID
  81            | ID '=' expr
  82            | '*' ID
  83            | '*' ID '=' expr

  84  delArrays : delArray
  85            | delArrays ',' delArray

  86  delArray : ID delArrayDims
  87           | ID delArrayDims '=' '{' arrayContents '}'

  88  delArrayDims : '[' expr ']'
  89               | delArrayDims '[' expr ']'

  90  arrayContents : arrayContent
  91                | arrayContents ',' arrayContent

  92  arrayContent : '{' arrayContents '}'
  93               | expr

  94  delFn : delType ID '(' delFnParams ')'
  95        | delType '*' ID '(' delFnParams ')'

  96  delFnParams : delFnParam
  97              | delFnParams ',' delFnParam
  98              |

  99  delFnParam : delType
 100             | delType '*'
 101             | delType ID
 102             | delType '*' ID

 103  stmts : stmts stmt
 104        |

 105  stmt : expr ';'
 106       | ifElseStmt
 107       | switchStmt
 108       | whileStmt
 109       | forStmt
 110       | returnStmt
 111       | breakStmt
 112       | continueStmt
 113       | compoundStmt
 114       | delVarsScalar
 115       | delVarsArray

 116  ifElseStmt : IF '(' expr ')' compoundStmt
 117             | IF '(' expr ')' compoundStmt ELSE compoundStmt

 118  switchStmt : SWITCH '(' expr ')' '{' switchClauses '}'
 119             | SWITCH '(' expr ')' '{' '}'

 120  switchClauses : switchClause
 121                | switchClauses switchClause

 122  switchClause : CASE expr ':' stmts
 123               | DEFAULT ':' stmts

 124  whileStmt : WHILE '(' expr ')' stmt
 125            | DO stmt WHILE '(' expr ')' ';'

 126  forStmt : FOR '(' forExpr ';' forExpr ';' forExpr ')' stmt

 127  forExpr : expr
 128          |

 129  returnStmt : RETURN expr ';'
 130             | RETURN ';'

 131  breakStmt : BREAK ';'

 132  continueStmt : CONTINUE ';'

 133  compoundStmt : '{' stmts '}'

state 0
	$accept : . program $end  (0)

	CONST  shift 1
	SIGNED_UNSIGNED  shift 2
	LONG  shift 3
	SHORT  shift 4
	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	.  error

	program  goto 10
	programComp  goto 11
	delType  goto 12
	delLongShort  goto 13
	delVarsScalar  goto 14
	delVarsArray  goto 15
	delFn  goto 16


state 1
	delType : CONST . INT  (48)
	delType : CONST . delLongShort INT  (49)
	delType : CONST . SIGNED_UNSIGNED INT  (50)
	delType : CONST . SIGNED_UNSIGNED delLongShort INT  (51)
	delType : CONST . CHAR  (56)
	delType : CONST . delLongShort  (57)
	delType : CONST . SIGNED_UNSIGNED CHAR  (58)
	delType : CONST . SIGNED_UNSIGNED delLongShort  (59)
	delType : CONST . SIGNED_UNSIGNED  (64)
	delType : CONST . FLOAT  (65)
	delType : CONST . DOUBLE  (66)
	delType : CONST . VOID  (67)
	delType : CONST .  (68)

	SIGNED_UNSIGNED  shift 17
	LONG  shift 3
	SHORT  shift 4
	INT  shift 18
	CHAR  shift 19
	FLOAT  shift 20
	DOUBLE  shift 21
	VOID  shift 22
	ID  reduce 68
	','  reduce 68
	'*'  reduce 68
	')'  reduce 68

	delLongShort  goto 23


state 2
	delType : SIGNED_UNSIGNED . INT  (46)
	delType : SIGNED_UNSIGNED . delLongShort INT  (47)
	delType : SIGNED_UNSIGNED . CHAR  (54)
	delType : SIGNED_UNSIGNED . delLongShort  (55)
	delType : SIGNED_UNSIGNED .  (60)

	LONG  shift 3
	SHORT  shift 4
	INT  shift 24
	CHAR  shift 25
	ID  reduce 60
	','  reduce 60
	'*'  reduce 60
	')'  reduce 60

	delLongShort  goto 26


state 3
	delLongShort : LONG .  (69)
	delLongShort : LONG . LONG  (70)

	LONG  shift 27
	INT  reduce 69
	ID  reduce 69
	','  reduce 69
	'*'  reduce 69
	')'  reduce 69


state 4
	delLongShort : SHORT .  (71)

	.  reduce 71


state 5
	delType : INT .  (44)

	.  reduce 44


state 6
	delType : CHAR .  (52)

	.  reduce 52


state 7
	delType : FLOAT .  (61)

	.  reduce 61


state 8
	delType : DOUBLE .  (62)

	.  reduce 62


state 9
	delType : VOID .  (63)

	.  reduce 63


state 10
	$accept : program . $end  (0)
	program : program . programComp  (2)

	$end  accept
	CONST  shift 1
	SIGNED_UNSIGNED  shift 2
	LONG  shift 3
	SHORT  shift 4
	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	.  error

	programComp  goto 28
	delType  goto 12
	delLongShort  goto 13
	delVarsScalar  goto 14
	delVarsArray  goto 15
	delFn  goto 16


state 11
	program : programComp .  (1)

	.  reduce 1


state 12
	delVarsScalar : delType . delScalars ';'  (76)
	delVarsArray : delType . delArrays ';'  (77)
	delFn : delType . ID '(' delFnParams ')'  (94)
	delFn : delType . '*' ID '(' delFnParams ')'  (95)

	ID  shift 29
	'*'  shift 30
	.  error

	delScalars  goto 31
	delScalar  goto 32
	delArrays  goto 33
	delArray  goto 34


state 13
	delType : delLongShort . INT  (45)
	delType : delLongShort .  (53)

	INT  shift 35
	ID  reduce 53
	','  reduce 53
	'*'  reduce 53
	')'  reduce 53


state 14
	programComp : delVarsScalar .  (3)

	.  reduce 3


state 15
	programComp : delVarsArray .  (4)

	.  reduce 4


state 16
	programComp : delFn . ';'  (5)
	programComp : delFn . compoundStmt  (6)

	';'  shift 36
	'{'  shift 37
	.  error

	compoundStmt  goto 38


state 17
	delType : CONST SIGNED_UNSIGNED . INT  (50)
	delType : CONST SIGNED_UNSIGNED . delLongShort INT  (51)
	delType : CONST SIGNED_UNSIGNED . CHAR  (58)
	delType : CONST SIGNED_UNSIGNED . delLongShort  (59)
	delType : CONST SIGNED_UNSIGNED .  (64)

	LONG  shift 3
	SHORT  shift 4
	INT  shift 39
	CHAR  shift 40
	ID  reduce 64
	','  reduce 64
	'*'  reduce 64
	')'  reduce 64

	delLongShort  goto 41


state 18
	delType : CONST INT .  (48)

	.  reduce 48


state 19
	delType : CONST CHAR .  (56)

	.  reduce 56


state 20
	delType : CONST FLOAT .  (65)

	.  reduce 65


state 21
	delType : CONST DOUBLE .  (66)

	.  reduce 66


state 22
	delType : CONST VOID .  (67)

	.  reduce 67


state 23
	delType : CONST delLongShort . INT  (49)
	delType : CONST delLongShort .  (57)

	INT  shift 42
	ID  reduce 57
	','  reduce 57
	'*'  reduce 57
	')'  reduce 57


state 24
	delType : SIGNED_UNSIGNED INT .  (46)

	.  reduce 46


state 25
	delType : SIGNED_UNSIGNED CHAR .  (54)

	.  reduce 54


state 26
	delType : SIGNED_UNSIGNED delLongShort . INT  (47)
	delType : SIGNED_UNSIGNED delLongShort .  (55)

	INT  shift 43
	ID  reduce 55
	','  reduce 55
	'*'  reduce 55
	')'  reduce 55


state 27
	delLongShort : LONG LONG .  (70)

	.  reduce 70


state 28
	program : program programComp .  (2)

	.  reduce 2


state 29
	delScalar : ID .  (80)
	delScalar : ID . '=' expr  (81)
	delArray : ID . delArrayDims  (86)
	delArray : ID . delArrayDims '=' '{' arrayContents '}'  (87)
	delFn : delType ID . '(' delFnParams ')'  (94)

	'='  shift 44
	'('  shift 45
	'['  shift 46
	';'  reduce 80
	','  reduce 80

	delArrayDims  goto 47


state 30
	delScalar : '*' . ID  (82)
	delScalar : '*' . ID '=' expr  (83)
	delFn : delType '*' . ID '(' delFnParams ')'  (95)

	ID  shift 48
	.  error


state 31
	delVarsScalar : delType delScalars . ';'  (76)
	delScalars : delScalars . ',' delScalar  (79)

	';'  shift 49
	','  shift 50
	.  error


state 32
	delScalars : delScalar .  (78)

	.  reduce 78


state 33
	delVarsArray : delType delArrays . ';'  (77)
	delArrays : delArrays . ',' delArray  (85)

	';'  shift 51
	','  shift 52
	.  error


state 34
	delArrays : delArray .  (84)

	.  reduce 84


state 35
	delType : delLongShort INT .  (45)

	.  reduce 45


state 36
	programComp : delFn ';' .  (5)

	.  reduce 5


state 37
	compoundStmt : '{' . stmts '}'  (133)
	stmts : .  (104)

	.  reduce 104

	stmts  goto 53


state 38
	programComp : delFn compoundStmt .  (6)

	.  reduce 6


state 39
	delType : CONST SIGNED_UNSIGNED INT .  (50)

	.  reduce 50


state 40
	delType : CONST SIGNED_UNSIGNED CHAR .  (58)

	.  reduce 58


state 41
	delType : CONST SIGNED_UNSIGNED delLongShort . INT  (51)
	delType : CONST SIGNED_UNSIGNED delLongShort .  (59)

	INT  shift 54
	ID  reduce 59
	','  reduce 59
	'*'  reduce 59
	')'  reduce 59


state 42
	delType : CONST delLongShort INT .  (49)

	.  reduce 49


state 43
	delType : SIGNED_UNSIGNED delLongShort INT .  (47)

	.  reduce 47


state 44
	delScalar : ID '=' . expr  (81)

	ID  shift 55
	CONST_INT  shift 56
	CONST_FLOAT  shift 57
	CONST_CHAR  shift 58
	CONST_STRING  shift 59
	INCDEC  shift 60
	'&'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'!'  shift 65
	'~'  shift 66
	'('  shift 67
	.  error

	const  goto 68
	expr  goto 69
	factor  goto 70
	mutable  goto 71
	immutable  goto 72


state 45
	delFn : delType ID '(' . delFnParams ')'  (94)
	delFnParams : .  (98)

	CONST  shift 1
	SIGNED_UNSIGNED  shift 2
	LONG  shift 3
	SHORT  shift 4
	INT  shift 5
	CHAR  shift 6
	FLOAT  shift 7
	DOUBLE  shift 8
	VOID  shift 9
	','  reduce 98
	')'  reduce 98

	delType  goto 73
	delLongShort  goto 13
	delFnParams  goto 74
	delFnParam  goto 75


state 46
	delArrayDims : '[' . expr ']'  (88)

	ID  shift 55
	CONST_INT  shift 56
	CONST_FLOAT  shift 57
	CONST_CHAR  shift 58
	CONST_STRING  shift 59
	INCDEC  shift 60
	'&'  shift 61
	'+'  shift 62
	'-'  shift 63
	'*'  shift 64
	'!'  shift 65
	'~'  shift 66
	'('  shift 67
	.  error

	const  goto 68
	expr  goto 76
	factor  goto 70
	mutable  goto 71
	immutable  goto 72


state 47
	delArray : ID delArrayDims .  (86)
	delArray : ID delArrayDims . '=' '{' arrayContents '}'  (87)
	delArrayDims : delArrayDims . '[' expr ']'  (89)

	'='  shift 77
	'['  shift 78
	';'  reduce 86
	','  reduce 86


state 48
	delScalar : '*' ID .  (82)
	delScalar : '*' ID . '=' expr  (83)
	delFn : delType '*' ID . '(' delFnParams ')'  (95)

	'='  shift 79
	'('  shift 80
	';'  reduce 82
	','  reduce 82


state 49
	delVarsScalar : delType delScalars ';' .  (76)

	.  reduce 76


state 50
	delScalars : delScalars ',' . delScalar  (79)

	ID  shift 81
	'*'  shift 82
	.  error

	delScalar  goto 83


state 51
	delVarsArray : delType delArrays ';' .  (77)

	.  reduce 77


state 52
	delArrays : delArrays ',' . delArray  (85)

	ID  shift 84
	.  error

	delArray  goto 85

